--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </div>
   </header>
   <div id="imageContainer"></div>
+  <div id="sentinel"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
